--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -5,7 +5,7 @@ Daarna volgt een overzicht van de vaagsimilariteitsmaten en aggregatieoperatoren
 we later gebruik zullen maken. We hebben dit deel van deze scriptie bewust zo 
 bondig mogelijk gehouden. Voor meer informatie verwijzen
 we naar \cite{kerre:vaagmodellen}, \cite{vanderweken:similariteitsmaten} en 
-\cite{victor:aggregatieoperatoren}.
+\cite{detyniecki:numerical_aggregation_operators}.
 
 
 \section{Basisbegrippen uit de vaagverzamelingenleer}
@@ -114,7 +114,7 @@ Voor de eenvoud noteren we in het vervolg $\mu_A(x)$ steeds als $A(x)$. We maken
 met andere woorden geen onderscheid tussen de vaagverzameling en de 
 lidmaatschapsfunctie. Voor de klasse van vaagverzamelingen in een universum $X$ gebruiken we
 de notatie $\mathcal{F}(X)$.
-
+% beter geen nieuwe paragraaf volgens Stefan
 De \emph{drager} en de \emph{kern} van een vaagverzameling zijn twee belangrijke begrippen: 
 \begin{definitie}
 De drager van een vaagverzameling $A$ in $X$ wordt gedefinieerd als:
@@ -181,7 +181,26 @@ S_P(x,y) &= x + y - x \cdot y
 \end{align*}
 %\end{array}
 %\end{displaymath}
-voor alle $(x,y)$ in $[0,1]^2$.
+voor alle $(x,y)$ in $[0,1]^2$. Figuur~\ref{fig:grafieken_normen} toont de corresponderende
+grafieken.
+
+\begin{figure}[tp]
+\begin{center}
+\subfigure[]{
+\includegraphics[width=0.48\textwidth]{images/t_m.eps}
+}
+\subfigure[]{
+\includegraphics[width=0.48\textwidth]{images/s_m.eps}
+}
+\subfigure[]{
+\includegraphics[width=0.48\textwidth]{images/t_p.eps}
+}
+\subfigure[]{
+\includegraphics[width=0.48\textwidth]{images/s_p.eps}
+}
+\caption{\label{fig:grafieken_normen}De grafiek voor (a) $T_M$, (b) $S_M$, (c) $T_P$ en (d) $S_P$.}
+\end{center}
+\end{figure}
 
 We kunnen de bovenstaande operatoren nu gebruiken om de klassieke verzameltechnische bewerkingen 
 $co$ (complement), $\cap$ (doorsnede) en $\cup$ (unie) te
@@ -369,21 +388,25 @@ $
 \section{Aggregatieoperatoren} 
 
 Algemeen gesproken is een \emph{aggregatieoperator} een mathematisch object dat als doel heeft
-een verzameling getallen te reduceren tot \'e\'en representatief getal. In de context van 
+een eindige verzameling getallen te reduceren tot \'e\'en representatief getal. In de context van 
 vaagverzamelingen wordt doorgaans de volgende definitie gebruikt 
-\cite{victor:aggregatieoperatoren}:
+\cite{detyniecki:numerical_aggregation_operators}:
 \begin{definitie}
-Een aggregatieoperator $a$ is een stijgende continue $[0,1]^n - [0,1]$ afbeelding, 
-met $n \in \mathbb{N} \setminus \{0,1\}$, die voldoet aan de randvoorwaarden $a(0,0,\ldots,0)=0$ en 
-$a(1,1,\ldots,1)=1$.
+Een aggregatieoperator $a$ is een stijgende $\bigcup_{n \in \mathbb{N}}[0,1]^n - [0,1]$ afbeelding
+waarvoor $a(x)=x$, $\forall x \in [0,1]$, en die voldoet aan de randvoorwaarden 
+$a(0,0,\ldots,0)=0$ en $a(1,1,\ldots,1)=1$.
 \end{definitie}
 \noindent
+Bovenop de eisen die opgelegd worden in die algemene definitie, worden er vaak nog
+bijkomende eigenschappen vooropgesteld 
+\cite{detyniecki:numerical_aggregation_operators, grabisch:fuzzy_aggregation_of_numerical_preferences, victor:aggregatieoperatoren}.
+
 Op basis van de manier waarop de aggregatie gebeurt, kunnen aggregatieoperatoren onderverdeeld
 worden in verschillende categorie\"en \cite{grabisch:fuzzy_aggregation_of_numerical_preferences}:
 conjuctieve, disjunctieve, compenserende, niet-compenserende en gewogen operatoren.
-
 In \cite{detyniecki:numerical_aggregation_operators} wordt er een overzicht gegeven van
-de bestaande aggregatieoperatoren. Het is niet moeilijk om in te zien dat elke continue 
-conjunctor of disjunctor aan de bovenstaande definitie voldoet. Voor $n > 2$ liggen het 
-rekenkundig en het gewogen gemiddelde het meest voor de hand. Ook het minimum en het maximum
-kunnen in dat geval als aggregatieoperator gebruikt worden.
+de bestaande aggregatieoperatoren. Het rekenkundig en het gewogen gemiddelde zijn
+veelgebruikte aggregatieoperatoren. Ook het minimum en het maximum behoren
+tot de mogelijkheden. Meer algemeen is het niet moeilijk om in te zien 
+dat we, wegens de associativiteit, door recursieve toepassing van een willekeurige
+t-norm of t-conorm een aggregatieoperator bekomen.
