--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -57,7 +57,7 @@ van een sc\`ene meestal sterk verschillend zijn.
 
 Om uit meerdere similariteitsmaten de meest geschikte te kiezen, 
 moeten we een manier vinden om een dergelijke maat objectief te beoordelen. 
-Dat doen we door, voor een bepaald voorbeeld, elke maat toe te passen op een eenzelfde collectie 
+Dat doen we door, voor een bepaald voorbeeld, elke maat toe te passen op eenzelfde collectie 
 van beelden. Vervolgens beoordelen we de zo bekomen rangschikking met behulp van een performantiemaat.
 
 Figuur~\ref{fig:testcollectie} bevat de collectie van beelden die we gaan 
@@ -294,7 +294,6 @@ vinden we bovendien:
 \end{array}
 \end{displaymath}
 We kunnen tabel~\ref{tab:similatiteitsmaten} bijgevolg herschrijven tot tabel~\ref{tab:beperkte_similatiteitsmaten}.
-
 \begin{table}[!t]
 \begin{center}
 \begin{tabular}{|l|}
@@ -356,7 +355,7 @@ $
 \caption{\label{tab:beperkte_similatiteitsmaten}De vaagsimilariteitsmaten geschreven met sommaties waarvan het bereik beperkt is.}
 \end{center}
 \end{table}
-
+% beter geen nieuwe paragraaf volgens Valerie
 Beschouw bijvoorbeeld $M_{5}$:
 \begin{displaymath}
 M_{5} = \frac{\min\{|A|,|B|\}}{\max\{|A|,|B|\}} = \frac{\min\{||A||,||B||\}}{\max\{||A||,||B||\}}
